--- a/pages/producto/producto.html
+++ b/pages/producto/producto.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./../assets/img/icon.png">
+    <link rel="icon" href="./../../assets/img/icon.png">
     <script src="https://kit.fontawesome.com/9d11d30b0e.js" crossorigin="anonymous"></script>
-    <script src="./../assets/js/menutienda.js" defer></script>
-    <link href="./../assets/css/bootstrap.min.css" rel="stylesheet">
+    <script src="./../../assets/js/producto.js" defer></script>
+    <script src="./../../assets/js/variables.js"></script>
+    <script src="./../../assets/js/menutienda.js" defer></script>
+    <link href="./../../assets/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="stylesheet" href="./../assets/css/style.css">    
-    <title>Contacto | Encuentranos</title>
+    <link rel="stylesheet" href="./../../assets/css/style.css">    
+    <title>Productos | APAPACHO</title>    
     <meta name="description" content="Tienda de vestuario infantil hecho a mano para apapachar a quienes amas. Produciendo desde el Sur de Chile a baja escala, amando la naturaleza.">
     <meta name="keywords" content="Apapacho,Valdivia,Diseño,Independiente,Tienda,Ropa,Infantil,Niños,Niñas,Niñes,Niño,Niña,Niñe">
 </head>
@@ -20,7 +22,7 @@
             <!-- Titulo principal -->
             <div class="logo animate__animated animate__zoomIn">
                 <div class="logo-img">
-                    <img class="img-thumbnail" src="./../assets/img/logo.jpg" alt="Logo Apapacho">
+                    <img class="img-thumbnail" src="./../../assets/img/logo.jpg" alt="Logo Apapacho">
                 </div>
                 <div class="logo-header">
                     <h1>APAPACHO</h1>
@@ -39,22 +41,22 @@
                     <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
                         <ul class="navbar-nav justify-content-center">
                             <li class="nav-item">
-                                <a href="./../index.html" class="nav-link">Inicio</a>
+                                <a href="./../../index.html" class="nav-link">Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a href="./tienda.html" class="nav-link">Tienda</a>
+                                <a href="./../tienda.html" class="nav-link active" aria-current="page">Tienda</a>
                             </li>
                             <li class="nav-item">
-                                <a href="./tallas.html" class="nav-link">Tallas</a>
+                                <a href="./../tallas.html" class="nav-link">Tallas</a>
                             </li>
                             <li class="nav-item">
-                                <a href="./quienes-somos.html" class="nav-link">¿Quienes Somos?</a>
+                                <a href="./../quienes-somos.html" class="nav-link">¿Quienes Somos?</a>
                             </li>
                             <li class="nav-item">
-                                <a href="./encuentranos.html" class="nav-link">Encuéntranos</a>
+                                <a href="./../encuentranos.html" class="nav-link">Encuéntranos</a>
                             </li>
                             <li class="nav-item">
-                                <a href="./contacto.html" class="nav-link active" aria-current="page">Contacto</a>
+                                <a href="./../contacto.html" class="nav-link">Contacto</a>
                             </li>
                         </ul>
                     </div>
@@ -74,61 +76,28 @@
             <div id="buscaTienda-resultado">
             </div>                
         </div>
-    </header>    
-    <main class="container paginas pad-2">
-        <div class="row bs_gutter-x-0">
-            <!-- Pagina: Contacto -->
-            <section class="col-md-9 pad-right-1p5">
-                <h2>Contacto</h2>
-                <article>                    
-                    <form class="row g-3">
-                        <div class="col-12">
-                            <label for="inputName4" class="form-label">Nombre</label>
-                            <input type="text" class="form-control" id="inputName4" placeholder="Nombre Apellido" aria-label="Nombre">
-                        </div>
-                        <div class="col-md-12">
-                          <label for="inputEmail4" class="form-label">Correo Eléctronico</label>
-                          <input type="email" class="form-control" id="inputEmail4" placeholder="correo@correo.com">
-                        </div>
-                        <div class="col-12">
-                          <label for="inputTel" class="form-label">Télefono</label>
-                          <input type="tel" class="form-control" id="inputTel" placeholder="+56987654321">
-                        </div>
-                        <div class="col-12">
-                            <label for="inputSubject" class="form-label">Asunto</label>
-                            <input type="tel" class="form-control" id="inputSubject" placeholder="Escriba el asunto">
-                        </div>
-                        <div class="col-12">
-                            <label for="textareaMessage" class="form-label">Mensaje</label>
-                            <textarea class="form-control" id="textareaMessage" rows="3" placeholder="Escriba aquí el mensaje"></textarea>
-                        </div>
-                        <div class="col-12">
-                            <button type="submit" class="btn btn-primary">Enviar</button>
-                        </div>
-                    </form>
-                </article>
-            </section>
-            <!-- Barra Lateral -->
-            <aside class="col-md-3">
-                <div id="informacionContacto">
-                    <h3>Información de Contacto</h3>
-                    <article class="aside-flex">
-                        <span class="info_contacto"><strong><i class="fa-solid fa-envelope"></i> Correo: </strong><a href="mailto:apapacho@gmail.com" target="_blank">apapacho@gmail.com</a></span>
-                        <span class="info_contacto"><strong><i class="fa-brands fa-whatsapp"></i> Tel: </strong><a href="tel:+56 991350488" target="_blank">+56 991350488</a></span>
-                        <span class="info_contacto"><strong><i class="fa-solid fa-house"></i> Dirección: </strong>Muñoz Hermosilla 1781, Valdivia, Chile</span>
-                        <span class="info_contacto">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3063.872685796018!2d-73.22601738499549!3d-39.832272059973526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9615eef47be263ff%3A0x8636755f497d9946!2zSm9zw6kgTWFyw61hIE11w7FveiBIZXJtb3NpbGxhIDE3ODEsIFZhbGRpdmlhLCBMb3MgUsOtb3M!5e0!3m2!1ses-419!2scl!4v1652917039044!5m2!1ses-419!2scl" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                        </span>
-                    </article>
-                </div>                
-            </aside>
-        </div>        
+    </header>   
+    <main class="container paginas pad-2 tienda">
+        <div class="row bs_gutter-x-0 justify-content-center">
+            <!-- Productos Destacados -->
+            <section class="col-12 pb-5">
+                <div>
+                    <div class="pad-2 text-center">
+                        <h2 id="productoNombre">Producto</h2>
+                    </div>
+                    <div class="row justify-content-center" id="productoTienda">
+
+                    </div>
+                </div>
+            </section>           
+        </div> 
     </main>
     <footer>
+        <!-- Sección Footer don 3 columnas-->
         <div class="container">
             <div class="row bs_gutter-x-0">
                 <div class="col footer_logo text-center">
-                    <img src="./../assets/img/Logo_blanco.png" alt="">
+                    <img src="./../../assets/img/Logo_blanco.png" alt="">
                 </div>
                 <div class="col footer_rrss text-center">
                     <h3>Síguenos</h3>
@@ -151,11 +120,12 @@
                 </div>
             </div>
         </div>
+        <!-- Atribución -->
         <div class="row justify-content-md-center atribucion">
             © Copyright 2022 Apapacho | Walter Pineda Ilabaca
         </div>
     </footer> 
-    <script src="./../assets/js/bootstrap.bundle.min.js"></script>
-
+    <script src="./../../assets/js/bootstrap.bundle.min.js"></script>
+    
 </body>
 </html>
