--- a/pages/producto/producto.html
+++ b/pages/producto/producto.html
@@ -125,7 +125,12 @@
             © Copyright 2022 Apapacho | Walter Pineda Ilabaca
         </div>
     </footer> 
-    <script src="./../../assets/js/bootstrap.bundle.min.js"></script>
-    
+    <div id="carroDiv">
+        <h3>Carrito de Compras</h3>
+        <div id="carrito">
+            <p>El carro de compras está vacio</p>
+        </div>
+    </div>
+    <script src="./../../assets/js/bootstrap.bundle.min.js"></script>    
 </body>
 </html>
