--- a/index.html
+++ b/index.html
@@ -286,6 +286,12 @@
             </div>
         </footer> 
     </div>
+    <div id="carroDiv">
+        <h3>Carrito de Compras</h3>
+        <div id="carrito">
+            <p>El carro de compras está vacio</p>
+        </div>
+    </div>
     <script src="./assets/js/bootstrap.bundle.min.js"></script>    
 </body>
 </html>
