--- a/pages/encuentranos.html
+++ b/pages/encuentranos.html
@@ -185,7 +185,12 @@
             © Copyright 2022 Apapacho | Walter Pineda Ilabaca
         </div>
     </footer> 
+    <div id="carroDiv">
+        <h3>Carrito de Compras</h3>
+        <div id="carrito">
+            <p>El carro de compras está vacio</p>
+        </div>
+    </div>
     <script src="./../assets/js/bootstrap.bundle.min.js"></script>
-
 </body>
 </html>
