--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./assets/img/icon.png">
     <script src="https://kit.fontawesome.com/9d11d30b0e.js" crossorigin="anonymous"></script>
-    <script src="./../assets/js/tienda.js" defer></script>
-    <script src="./../assets/js/variables.js"></script>
-    <script src="./../assets/js/menutienda.js" defer></script>
+    <script src="./assets/js/tienda.js" defer></script>
+    <script src="./assets/js/variables.js"></script>
+    <script src="./assets/js/menutienda.js" defer></script>
     <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
