--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -9,6 +9,7 @@
     <script src="./../assets/js/carrito.js" defer></script>
     <script src="./../assets/js/menutienda.js" defer></script>
     <script src="./../assets/js/tienda.js" defer></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link href="./../assets/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="./../assets/css/style.css">    
