--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./../assets/img/icon.png">
     <script src="https://kit.fontawesome.com/9d11d30b0e.js" crossorigin="anonymous"></script>
-    <script src="./../assets/js/carrito.js" defer></script>
-    <script src="./../assets/js/menutienda.js" defer></script>
+    <script src="./../assets/js/carrito.js" defer></script>    
+    <script src="./../assets/js/tienda.js" defer></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link href="./../assets/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="./../assets/css/style.css">    
-    <title>Contacto | Encuentranos</title>
+    <title>Tienda | APAPACHO</title>    
     <meta name="description" content="Tienda de vestuario infantil hecho a mano para apapachar a quienes amas. Produciendo desde el Sur de Chile a baja escala, amando la naturaleza.">
     <meta name="keywords" content="Apapacho,Valdivia,Diseño,Independiente,Tienda,Ropa,Infantil,Niños,Niñas,Niñes,Niño,Niña,Niñe">
 </head>
@@ -44,7 +44,7 @@
                                 <a href="./../index.html" class="nav-link">Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a href="./tienda.html" class="nav-link">Tienda</a>
+                                <a href="./tienda.html" class="nav-link active" aria-current="page">Tienda</a>
                             </li>
                             <li class="nav-item">
                                 <a href="./tallas.html" class="nav-link">Tallas</a>
@@ -56,77 +56,42 @@
                                 <a href="./encuentranos.html" class="nav-link">Encuéntranos</a>
                             </li>
                             <li class="nav-item">
-                                <a href="./contacto.html" class="nav-link active" aria-current="page">Contacto</a>
+                                <a href="./contacto.html" class="nav-link">Contacto</a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </nav>
         </div>
-        <div class="menu_tienda">
-            <div class="input-group" id="menu_tienda">                    
-                <span class="input-group-text" id="search-addon">
-                    <input type="search" id="buscaTienda-input" class="form-control search-click" placeholder="Buscar" aria-label="Search" aria-describedby="search-addon" />
-                    <span id="buscaTienda-spanIcon"><i class="fas fa-search" id="buscaTienda-icon"></i></span>                                                
-                </span>
-                <span class="input-group-text border-0">
-                    <span id="carroTienda-spanIcon"><i class="fas fa-shopping-cart" id="carroTienda-icon"></i></span>
-                </span>
-            </div>
-            <div id="buscaTienda-resultado">
-            </div>                
-        </div>
-    </header>    
-    <main class="container paginas pad-2">
-        <div class="row bs_gutter-x-0">
-            <!-- Pagina: Contacto -->
-            <section class="col-md-9 pad-right-1p5">
-                <h2>Contacto</h2>
-                <article>                    
-                    <form class="row g-3">
-                        <div class="col-12">
-                            <label for="inputName4" class="form-label">Nombre</label>
-                            <input type="text" class="form-control" id="inputName4" placeholder="Nombre Apellido" aria-label="Nombre">
-                        </div>
-                        <div class="col-md-12">
-                          <label for="inputEmail4" class="form-label">Correo Eléctronico</label>
-                          <input type="email" class="form-control" id="inputEmail4" placeholder="correo@correo.com">
-                        </div>
-                        <div class="col-12">
-                          <label for="inputTel" class="form-label">Télefono</label>
-                          <input type="tel" class="form-control" id="inputTel" placeholder="+56987654321">
-                        </div>
-                        <div class="col-12">
-                            <label for="inputSubject" class="form-label">Asunto</label>
-                            <input type="tel" class="form-control" id="inputSubject" placeholder="Escriba el asunto">
-                        </div>
-                        <div class="col-12">
-                            <label for="textareaMessage" class="form-label">Mensaje</label>
-                            <textarea class="form-control" id="textareaMessage" rows="3" placeholder="Escriba aquí el mensaje"></textarea>
-                        </div>
-                        <div class="col-12">
-                            <button type="submit" class="btn btn-primary">Enviar</button>
-                        </div>
-                    </form>
-                </article>
+        
+    </header>   
+    <main class="container paginas pad-2 tienda">
+        <div class="row bs_gutter-x-0 justify-content-center">
+            <!-- Pagina: Tienda -->
+            <section class="col-md-9">
+                <h2 class="pb-4">Carrito</h2>
+                <div id="productosCarrito">
+
+                </div>
             </section>
             <!-- Barra Lateral -->
             <aside class="col-md-3">
-                <div id="informacionContacto">
-                    <h3>Información de Contacto</h3>
-                    <article class="aside-flex">
-                        <span class="info_contacto"><strong><i class="fa-solid fa-envelope"></i> Correo: </strong><a href="mailto:apapacho@gmail.com" target="_blank">apapacho@gmail.com</a></span>
-                        <span class="info_contacto"><strong><i class="fa-brands fa-whatsapp"></i> Tel: </strong><a href="tel:+56 991350488" target="_blank">+56 991350488</a></span>
-                        <span class="info_contacto"><strong><i class="fa-solid fa-house"></i> Dirección: </strong>Muñoz Hermosilla 1781, Valdivia, Chile</span>
-                        <span class="info_contacto">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3063.872685796018!2d-73.22601738499549!3d-39.832272059973526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9615eef47be263ff%3A0x8636755f497d9946!2zSm9zw6kgTWFyw61hIE11w7FveiBIZXJtb3NpbGxhIDE3ODEsIFZhbGRpdmlhLCBMb3MgUsOtb3M!5e0!3m2!1ses-419!2scl!4v1652917039044!5m2!1ses-419!2scl" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                        </span>
-                    </article>
-                </div>                
+                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#filtros" aria-expanded="false">
+                    <i class="fa-solid fa-filter"></i>
+                </button>
+                <article id="CheckoutCarrito" class="aside-flex collapse">
+                    <h2>Total</h2>
+                    <div class="info_checkout">
+                        <span><strong>Subtotal:</strong><span id="checkout_subtotal"></span></span>
+                        <span><strong>Envío:</strong><span id="checkout_envio">Sin Información</span></span>
+                        <span><strong>Total:</strong><span id="checkout_total"></span></span>
+                    </div>
+                </article>
             </aside>
-        </div>        
+        </div> 
     </main>
     <footer>
+        <!-- Sección Footer don 3 columnas-->
         <div class="container">
             <div class="row bs_gutter-x-0">
                 <div class="col footer_logo text-center">
@@ -153,16 +118,11 @@
                 </div>
             </div>
         </div>
+        <!-- Atribución -->
         <div class="row justify-content-md-center atribucion">
             © Copyright 2022 Apapacho | Walter Pineda Ilabaca
         </div>
     </footer> 
-    <div id="carroDiv">
-        <h3>Carrito de Compras <a href="#" id="close"><i class="fas fa-times"></i></a></h3>
-        <div id="carrito">
-            <p>El carro de compras está vacio</p>
-        </div>
-    </div>
-    <script src="./../assets/js/bootstrap.bundle.min.js"></script>
+    <script src="./../assets/js/bootstrap.bundle.min.js"></script>    
 </body>
 </html>
