--- a/pages/producto/producto.html
+++ b/pages/producto/producto.html
@@ -9,9 +9,10 @@
     <script src="./../../assets/js/carrito.js" defer></script>
     <script src="./../../assets/js/menutienda.js" defer></script>
     <script src="./../../assets/js/producto.js" defer></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link href="./../../assets/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="stylesheet" href="./../../assets/css/style.css">    
+    <link rel="stylesheet" href="./../../assets/css/style.css">        
     <title>Productos | APAPACHO</title>    
     <meta name="description" content="Tienda de vestuario infantil hecho a mano para apapachar a quienes amas. Produciendo desde el Sur de Chile a baja escala, amando la naturaleza.">
     <meta name="keywords" content="Apapacho,Valdivia,Diseño,Independiente,Tienda,Ropa,Infantil,Niños,Niñas,Niñes,Niño,Niña,Niñe">
