--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/9d11d30b0e.js" crossorigin="anonymous"></script>
     <script src="./../assets/js/carrito.js" defer></script>
     <script src="./../assets/js/menutienda.js" defer></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link href="./../assets/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="./../assets/css/style.css">
