--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
             <!-- Productos Destacados -->
             <section class="col-12 pb-5">
                 <div class="pad-2 text-center zindex-popover"><h2>Productos Destacados</h2></div>
+                <div id="error"></div>
                 <div>
                     <div class="row justify-content-center" id="productosTienda">
                         <!--
