--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -66,6 +66,7 @@
         
     </header>   
     <main class="container paginas pad-2 tienda">
+        <div id="error"></div>
         <div class="row bs_gutter-x-0 justify-content-center">
             <!-- Pagina: Tienda -->
             <section class="col-md-9">
@@ -75,10 +76,7 @@
                 </div>
             </section>
             <!-- Barra Lateral -->
-            <aside class="col-md-3">
-                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#filtros" aria-expanded="false">
-                    <i class="fa-solid fa-filter"></i>
-                </button>
+            <aside class="col-md-3">                
                 <article id="CheckoutCarrito" class="aside-flex collapse">
                     <h2>Total</h2>
                     <div class="info_checkout">
