--- a/pages/encuentranos.html
+++ b/pages/encuentranos.html
@@ -80,6 +80,7 @@
     <main class="container paginas pad-2">
         <!-- Pagina Full Width: Encuentranos -->
         <div class="row bs_gutter-x-0">
+            <div id="error"></div>
             <section class="col-12">
                 <article id="encuentranos">
                     <h2>Encuéntranos</h2>
