--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -86,6 +86,7 @@
             <!-- Pagina: Tienda -->
             <section class="col-md-9">
                 <h2 class="pb-4">Tienda</h2>
+                <div id="error"></div>
                 <div class="productos">
                     <div class="row" id="productosTienda">
                         
