--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -78,6 +78,7 @@
         </div>
     </header>    
     <main class="container paginas pad-2">
+        <div id="error"></div>
         <div class="row bs_gutter-x-0">
             <!-- Pagina: Contacto -->
             <section class="col-md-9 pad-right-1p5">
