--- a/pages/producto/producto.html
+++ b/pages/producto/producto.html
@@ -80,6 +80,7 @@
     </header>   
     <main class="container paginas pad-2 tienda">
         <div class="row bs_gutter-x-0 justify-content-center">
+            <div id="error"></div>
             <!-- Productos Destacados -->
             <section class="col-12 pb-5">
                 <div>
