--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -80,6 +80,7 @@
     <main class="container paginas pad-2">
         <!-- Pagina Full Width: QuienesSomos -->
         <div class="row bs_gutter-x-0">
+            <div id="error"></div>
             <section class="col-12">
                 <article>
                     <h2>Quienes Somos</h2>
