--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -103,51 +103,24 @@
                     <div>
                         <h3>Color</h3>
                         <ul>
-                            <li><span class="cuadrado" style="background-color: blue;"></span> Azul</li>
-                            <li><span class="cuadrado" style="background-color: yellow;"></span> Amarillo</li>
-                            <li><span class="cuadrado" style="background-color: violet;"></span> Violeta</li>
-                            <li><span class="cuadrado" style="background-color: #316E92;"></span> Calipso</li>
-                            <li><span class="cuadrado" style="background-color: #40E0D0;"></span> Turquesa</li>
+                            <li><a href="#" id="Amaranta" class="filter_color"><span class="cuadrado" style="background-color: #AB274F;"></span> Amaranta</a></li>
+                            <li><a href="#" id="Amapola" class="filter_color"><span class="cuadrado" style="background-color: #FCC200;"></span> Amapola</a></li>
+                            <li><a href="#" id="Negro" class="filter_color"><span class="cuadrado" style="background-color: black;"></span> Negro</a></li>
+                            <li><a href="#" id="Gris" class="filter_color"><span class="cuadrado" style="background-color: grey;"></span> Gris</a></li>
+                            <li><a href="#" id="Azul" class="filter_color"><span class="cuadrado" style="background-color: blue;"></span> Azul</a></li>
+                            <li><a href="#" id="Morado" class="filter_color"><span class="cuadrado" style="background-color: purple;"></span> Morado</a></li>
+                            <li><a href="#" id="Violeta" class="filter_color"><span class="cuadrado" style="background-color: violet;"></span> Violeta</a></li>
                         </ul>
                     </div>
                     <div>
                         <h3>Talla</h3>
-                        <ul>
-                            <li>0-3M</li>
-                            <li>3-6Ms</li>
-                            <li>6-12M</li>
-                            <li>12-18M</li>
-                            <li>2</li>
-                            <li>3</li>
-                            <li>4</li>
-                            <li>5</li>
-                            <li>6</li>
-                            <li>7</li>
-                            <li>8</li>
-                            <li>9</li>
-                            <li>10</li>
-                            <li>11</li>
-                            <li>12</li>
+                        <ul>                            
+                            <li><a href="#" id="S" class="filter_talla">S</a></li>
+                            <li><a href="#" id="M" class="filter_talla">M</a></li>
+                            <li><a href="#" id="L" class="filter_talla">L</a></li>
+                            <li><a href="#" id="XL" class="filter_talla">XL</a></li>
                         </ul>
-                    </div>
-                    <div>
-                        <h3>Rango de Precios</h3>
-                        <ul>
-                            <li>
-                                <span class="rangoPrecios">
-                                    <label for="price-min">Minimo:</label>
-                                    <span class="rangoPrecios-center">
-                                        0<input type="range" name="price-min" id="price-min" value="100" min="0" max="500">5000
-                                    </span>
-                                    <label for="price-max">Maximo:</label>
-                                    <span class="rangoPrecios-center">
-                                        5001<input type="range" name="price-max" id="price-max" value="800" min="501" max="1000">50000
-                                    </span>
-                                </span>
-                                
-                            </li>
-                        </ul>
-                    </div>
+                    </div>                    
                 </article>
             </aside>
         </div> 
