--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="./assets/js/carrito.js" defer></script>
     <script src="./assets/js/menutienda.js" defer></script>
     <script src="./assets/js/tienda.js" defer></script>
+    <script src="./assets/js/instagram.js" defer></script>
     <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -221,34 +222,13 @@
             <!-- Sección Instagram -->
             <section class="instagram col-12">
                 <div class="tela">
-                    <div class="row">
+                    <div class="row" id="insta_feed">
                         <div class="instagram_info card">
                             <h2>Instagram</h2>
                             <span class="p-3">
                                 <a href="https://www.instagram.com/apapachoval/" target="_blank" class="boton p-3"><i class="fa-brands fa-instagram"></i> apapachoval</a>
                             </span>
-                        </div>
-                        <div class="card instagram_img">
-                            <img src="./assets/instagram/1.jpg" />
-                        </div>  
-                        <div class="card instagram_img">
-                            <img src="./assets/instagram/2.jpg" />
-                        </div> 
-                        <div class="card instagram_img">
-                            <img src="./assets/instagram/3.jpg" />
-                        </div> 
-                        <div class="card instagram_img">
-                            <img src="./assets/instagram/4.jpg" />
-                        </div> 
-                        <div class="card instagram_img">
-                            <img src="./assets/instagram/5.jpg" />
-                        </div>   
-                        <div class="card instagram_img">
-                            <img src="./assets/instagram/6.jpg" />
-                        </div> 
-                        <div class="card instagram_img">
-                            <img src="./assets/instagram/7.jpg" />
-                        </div>
+                        </div>                        
                     </div>                                                     
                 </div>
             </section>
