--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -82,8 +82,14 @@
                     <div class="info_checkout">
                         <span><strong>Subtotal:</strong><span id="checkout_subtotal"></span></span>
                         <span><strong>Envío:</strong><span id="checkout_envio">Sin Información</span></span>
-                        <span><strong>Total:</strong><span id="checkout_total"></span></span>
+                        <span><strong>Total:</strong><span id="checkout_total"></span></span>                        
                     </div>
+                    <hr>
+                    <h5>Información de Envío</h5>
+                    <div id="info_envio">
+
+                    </div>
+                    <span id="envio_checkout"><button class="btn" id="agregarEnvio" disabled>Calcular Envío</button></span>
                 </article>
             </aside>
         </div> 
