--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/9d11d30b0e.js" crossorigin="anonymous"></script>
     <script src="./../assets/js/carrito.js" defer></script>
     <script src="./../assets/js/menutienda.js" defer></script>
+    <script src="./../assets/js/contacto.js" defer></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link href="./../assets/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
@@ -83,31 +84,34 @@
             <!-- Pagina: Contacto -->
             <section class="col-md-9 pad-right-1p5">
                 <h2>Contacto</h2>
-                <article>                    
-                    <form class="row g-3">
+                <article>
+                    <div id="submitted_text"></div>               
+                    <form class="row g-3" action="https://formsubmit.co/4913ef988825dc4a832f28286317e7cb" method="POST" id="enviar_correo" >
                         <div class="col-12">
                             <label for="inputName4" class="form-label">Nombre</label>
-                            <input type="text" class="form-control" id="inputName4" placeholder="Nombre Apellido" aria-label="Nombre">
+                            <input type="text" name="name" class="form-control" id="inputName4" placeholder="Nombre Apellido" aria-label="Nombre">
                         </div>
                         <div class="col-md-12">
                           <label for="inputEmail4" class="form-label">Correo Eléctronico</label>
-                          <input type="email" class="form-control" id="inputEmail4" placeholder="correo@correo.com">
+                          <input type="email" name="email" class="form-control" id="inputEmail4" placeholder="correo@correo.com">
                         </div>
                         <div class="col-12">
                           <label for="inputTel" class="form-label">Télefono</label>
-                          <input type="tel" class="form-control" id="inputTel" placeholder="+56987654321">
+                          <input type="tel" name="telefone" class="form-control" id="inputTel" placeholder="+56987654321">
                         </div>
                         <div class="col-12">
                             <label for="inputSubject" class="form-label">Asunto</label>
-                            <input type="tel" class="form-control" id="inputSubject" placeholder="Escriba el asunto">
+                            <input type="tel" name="subject" class="form-control" id="inputSubject" placeholder="Escriba el asunto">
                         </div>
                         <div class="col-12">
                             <label for="textareaMessage" class="form-label">Mensaje</label>
-                            <textarea class="form-control" id="textareaMessage" rows="3" placeholder="Escriba aquí el mensaje"></textarea>
+                            <textarea class="form-control" name="message" id="textareaMessage" rows="3" placeholder="Escriba aquí el mensaje"></textarea>
                         </div>
                         <div class="col-12">
                             <button type="submit" class="btn btn-primary">Enviar</button>
                         </div>
+                        <input type="hidden" name="_captcha" value="false">
+                        <input type="hidden" name="_next" id="gracias" value="">
                     </form>
                 </article>
             </section>
