--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -85,7 +85,8 @@
             <section class="col-md-9 pad-right-1p5">
                 <h2>Contacto</h2>
                 <article>
-                    <div id="submitted_text"></div>               
+                    <div id="submitted_text"></div>
+                    <div id="enviando"></div>               
                     <form class="row g-3" action="https://formsubmit.co/4913ef988825dc4a832f28286317e7cb" method="POST" id="enviar_correo" >
                         <div class="col-12">
                             <label for="inputName4" class="form-label">Nombre</label>
